# spotify-recommendations

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: deploy-app.yml  docker-publish.yml  manage-infra.yml
conf/base/: catalog.yml  parameters_spotify.yml
data/models/autoencoder/: genre_id.json
infra/: main.tf  startup.sh  wait_for_startup.sh
notebooks/: spotify_autoencoders.ipynb
src/spotify_recommendations/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/spotify_recommendations/pipelines/: common.py  content_k_nary_nogenres.py  data.py  model.py  track_knn.py
src/spotify_recommendations/pipelines/autoencoder_training/: nodes.py  pipeline.py
src/spotify_recommendations/pipelines/data_preparation/: nodes.py  pipeline.py
src/spotify_recommendations/pipelines/generate_embeddings/: nodes.py  pipeline.py
src/spotify_recommendations/pipelines/spotify/: __init__.py  nodes.py  pipeline.py
tests/pipelines/spotify/: test_pipeline.py
ui/: app.py
